--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,40 +1,42 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Kata - Idukay</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Angular Material requires Angular.js Libraries -->
 
-    <!-- <link rel="stylesheet" href="styles/main.css"> -->
+    <link rel="stylesheet" href="styles/main.css">
 
-  </head>
-  <body ng-app="App" ontouchstart="" onmouseover="">
-    <h1>General App</h1>
-    <div ng-controller="Main">
-      <h2>Controller status: {{controller_loaded || 'not loaded!'}}</h2>
-        <ul>
-          <li ng-repeat="item in datos">{{item}}</li>
-        </ul>
-      <hr>
-      <button ng-click="btn_click()">GENERAR</button>
-      <hr>
-      Seleccionados de Estocolmo:
-      <ul>
-        <li ng-repeat="item in estocolmo">{{item.val}}</li>
-      </ul>
-      <hr>
-      Seleccionados de Londres:
-      <ul>
-        <li ng-repeat="item in estocolmo">{{item.val}}</li>
-      </ul>
-      <div ng-view ng-cloak></div>
+</head>
+
+<body ng-app="App" ontouchstart="" onmouseover="" class="dc_style">
+    <md-toolbar class="md-hue-2">
+        <div class="md-toolbar-tools">
+            <md-button class="md-icon-button" aria-label="Settings" ng-disabled="true">
+                <md-icon>apps</md-icon>
+            </md-button>
+            <h2 flex md-truncate>Kata - Idukay</h2>
+        </div>
+    </md-toolbar>
+    <div ng-controller="Main" layout="row">
+        <div ng-view ng-cloak layout="row"></div>
     </div>
 
     <script src="bower_components/jquery/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+    <!-- Angular Material Library -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
 
     <script src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
 
@@ -42,5 +44,6 @@
     <script src="scripts/group/module.js"></script>
     <script src="scripts/main/controller.js"></script>
     <script src="scripts/group/controller.js"></script>
-  </body>
+</body>
+
 </html>
